--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
 							<section class="panel spotlight large left">
 								<div class="content span-5">
 									<h2 class="major">Magna amet tempus</h2>
-									<p>Social media accounts</p>
+									<p>Social media </p>
+									<iframe src="http://www.webpage.com" width="400" height="400"></iframe>
+
 								</div>
 								<div class="image filtered tinted" data-position="top right">
 									<img src="images/pic03.jpg" alt="" />
