--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 								<div class="content span-5">
 									<h2 class="major">Magna amet tempus</h2>
 									<p>Social media </p>
-									<iframe src="http://www.webpage.com" width="400" height="400"></iframe>
+									<iframe src="https://rss.bloople.net/" width="400" height="400"></iframe>
 
 								</div>
 								<div class="image filtered tinted" data-position="top right">
