--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
 									<h1 class="major">Hello, my name<br />
-									is Jose Dun</h1>
-									<p>This is <strong>Ethereal</strong>, a site for tech related news <a href="https://twitter.com/3t3rna1Gum">HTML5 UP</a>. It’s fully responsive, built on HTML5 and CSS3, and released entirely for free under the Creative Commons license. Hope you dig it :)</p>
+									is Jose Dun Davila</h1>
+									<p>This is <strong>Ethereal</strong>, a site for tech related news <a href="https://twitter.com/3t3rna1Gum">Eternalgum</a>. It’s fully responsive, built on HTML5 and CSS3, and released entirely for free under the Creative Commons license. Hope you dig it :)</p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
 									</ul>
@@ -39,7 +39,8 @@
 							<section class="panel spotlight medium right" id="first">
 								<div class="content span-7">
 									<h2 class="major">Top News Today</h2>
-									<p>Insert news info here.</p>
+									<rssapp-wall id="igAy9jM8ZYx7q7qa"></rssapp-wall><script src="https://widget.rss.app/v1/wall.js" type="text/javascript" async></script>
+									
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="images/pic02.jpg" alt="" />
